--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@ body {
     margin: 0;
     background-color: white;
 }
+popup {
+    width: 200px; /* largura do pop-up */
+    max-width: 80%; /* largura máxima do pop-up */
+    background-color: white;
+    border: 1px solid black;
+    padding: 10px;
+    position: absolute;
+    z-index: 1000; /* coloca o pop-up acima de todos os outros elementos */
+}
