--- a/style.css
+++ b/style.css
@@ -6,19 +6,27 @@ body {
     margin: 0;
     background-color: white;
 }
-
-area:hover{
-    background: green;
+.container {
+    display: flex;
 }
-
-popup {
-    width: 200px; /* largura do pop-up */
-    max-width: 80%; /* largura máxima do pop-up */
-    background-color: white;
-    border: 1px solid black;
-    padding: 10px;
-    position: absolute;
-    z-index: 1000; /* coloca o pop-up acima de todos os outros elementos */
-    border-radius: 15px;
+.sidebar {
+    width: 250px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    display: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.1);
 }
-
+.content {
+    margin-right: 250px;
+    padding: 20px;
+}
+.image {
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
